--- a/10erdekessegregiautokrol.html
+++ b/10erdekessegregiautokrol.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="10erdekessegregiautokrol.html">10 érdekesség régi autókról</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link disabled" href="evautoi.html">Év autói</a>
+                        <a class="nav-link " href="evautoi.html">Év autói</a>
                       </li>
                     </ul>
             </nav>
