--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Lavner Szabolcs</title>
 </head>
 <body>
-    <div class="contanier">
+    <div class="container">
         <main class="row">
             <header class="col-md-12">
                 <h1>Régi autók</h1>
@@ -28,19 +28,19 @@
                         <a class="nav-link" href="evautoi.html">Év autói</a>
                       </li>
                     </ul>
-            </nav>
-            <article class="col-md-8 row">
+              </nav>
+              <article class="col-md-8 row">
                 <div class="card col-md-6">
-  <div class="card-header">
-    <h2>
-        Karl Benz
-    </h2>
+                <div class="card-header">
+                  <h2>
+                    Karl Benz
+                  </h2>
                 </div>
                   <div class="card-body">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Carl-Benz_coloriert.jpg/500px-Carl-Benz_coloriert.jpg
                               " class="img-thumbnail" alt="Karl Benz">
                   </div>
-                  <div class="card-footer">
+                  <div class="card-body">
                     <p>
                         1885-ben megépítette kétütemű gázmotorját, 1886-ban pedig bemutatta már egy lóerős, négyütemű motorral hajtott, háromkerekű járművét. Sok gépjárművel kapcsolatos szabadalmat jegyzett és tökéletesítette a villanygyújtást is.
 
@@ -57,7 +57,7 @@
                   <div class="card-body">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/Henry_ford_1919.jpg/500px-Henry_ford_1919.jpg" class="img-thumbnail" alt="Henry                 Ford">
                   </div>
-                  <div class="card-footer">
+                  <div class="card-body">
                     <p>
                         Termékeny feltalálónak számított, nevéhez 161 amerikai szabadalom fűződik. A Ford Company tulajdonosaként a világ leggazdagabb és leghíresebb emberei között volt. A nevéhez fűződő fordizmus nemcsak az autógyártást, de az Egyesült Államok közlekedését és iparát is forradalmasította. 
                     </p>
@@ -68,9 +68,13 @@
             </article>
             <aside class="col-md-4">
               <img src="https://megaport.hu/media/king-include/uploads/2020/01/1936-auburn-slowburn-2427736380.jpg
-" class="img-thumbnail" alt="fekete">
-                
-
+                       " class="img-thumbnail" alt="fekete">
+              <img src="https://megaport.hu/media/king-include/uploads/2020/01/1953-buick-skylark-skyscraper-8564903811.jpg
+                       " class="img-thumbnail" alt="lila">
+                       <img src="https://megaport.hu/media/king-include/uploads/2020/01/1948-jaguar-black-pearl-4605095127.jpg
+                       " class="img-thumbnail" alt="fekete2">
+                       <img src="https://megaport.hu/media/king-include/uploads/2020/01/1937-lincoln-zephyr-voodoo-priest-6043163337.jpg
+                       " class="img-thumbnail" alt="piros">
             </aside>
             <footer class="col-md-12">
               <h2>Lavner Szabolcs </h2>
