--- a/evautoi.html
+++ b/evautoi.html
@@ -15,7 +15,7 @@
             <header class="col-md-12">
                 <h1>Régi autók</h1>
             </header>
-            <nav class="navbar navbar-expand-sm bg-light navbar-light">
+            <nav class="navbar navbar-expand-sm bg-success navbar-light">
                 <div class="container-fluid">
                     <ul class="navbar-nav">
                      <li class="nav-item">
@@ -25,12 +25,22 @@
                         <a class="nav-link" href="10erdekessegregiautokrol.html">10 érdekesség régi autókról</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link disabled" href="evautoi.html">Év autói</a>
+                        <a class="nav-link " href="evautoi.html">Év autói</a>
                       </li>
                     </ul>
             </nav>
             <article class="col-md-8 row">
-                <img src="" alt="">
+                <div class="container mt-3">            
+                    <table class="table table-striped">
+                      <thead>
+                        <tr>
+                          <th>Év</th>
+                          <th>első</th>
+                          <th>pontszám</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
             </article>
             <aside class="col-md-4"></aside>
             <footer class="col-md-12"></footer>
