--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                        <img src="https://megaport.hu/media/king-include/uploads/2020/01/1937-lincoln-zephyr-voodoo-priest-6043163337.jpg
                        " class="img-thumbnail" alt="piros">
             </aside>
-            <footer class="col-md-12">
+            <footer class="col-md-12 text-center">
               <h2>Lavner Szabolcs </h2>
             </footer>
         </main>        
