--- a/10erdekessegregiautokrol.html
+++ b/10erdekessegregiautokrol.html
@@ -6,16 +6,16 @@
     <meta name="description" content="régi autók">
     <meta name="keywords" content="híre régi autók">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Lavner Szabolcs</title>
 </head>
 <body>
     <div class="contanier">
         <main class="row">
-            <header class="col-md-12">
+            <header class="col-md-12 text-success">
                 <h1>Régi autók</h1>
             </header>
-            <nav class="navbar navbar-expand-sm bg-light navbar-light">
+            <nav class="navbar navbar-expand-sm bg-success navbar-light">
                 <div class="container-fluid">
                     <ul class="navbar-nav">
                      <li class="nav-item">
@@ -30,9 +30,28 @@
                     </ul>
             </nav>
             <article class="col-md-8 row">
-                <img src="" alt="">
+                <ol><li>1. Az első „autót” ágyú vontatásra használták és 3 km/órás sebességgel tudott száguldani. Nicolas-Joseph Cugnot francia tüzértiszt, mérnök és feltaláló 1796-ban készítette el ezt az önjáró, gőzgéppel hajtott szerkezetet.</li></ol>
+                <ol><li>2. 1899. január 3-án a New York Times hasábjain használták először az „autómobil” kifejezést.</li></ol>
+                <ol><li>3. A futószalag alapötlete az amerikai autógyártó Ransom Eli Olds fejéből pattant ki, az első tömeggyártású gépkocsi előállítása is hozzá kötődik, 1901-ben indult meg az Oldsmobile Curved Dash sorozatgyártása.</li></ol>
+                <ol><li>4. A futószalag elmélet sikeres kivitelezésének babérjai Henry Fordot illetik, forradalmi találmánya 1913-ban a híres Ford T-modell gyártási idejét 12 óráról 93 percre csökkentette. Ez lehetővé tette a tömeggyártát, melynek hála a Ford T-modell ára jelentősen lecsökkent: 1924-ben már 260 dollárért vehettek Fordot a száguldás szerelmesei.</li></ol>
+                <ol><li>5. 1903-ig hagymával és répával tisztították az autók üvegeit (már amennyire voltak). Ekkor azonban Mary Anderson (igen bizony, egy hölgy!) találmánya, az ablaktörlő gyorsan véget vetett a zöldségek ilyetén való alternatív felhasználásának. Más jelentős autóipari találmányok is hölgyekhez köthetők: az első hangtompító, az irányjelző és a fűtés is női találmány, legalábbis részben.</li></ol>
+                <ol><li>6. Ha már a hölgyeknél tartunk, a világ első „túra autósa” is nő volt: Bertha Benz elkötötte férje, Karl Benz (ő volt az első tényleg gépkocsinak nevezhető jármű megalkotója) autóját 1888-ban és megtett vele 106 kilométert ezzel bizonyítván, hogy az autó nemcsak városi furikázásra alkalmas.</li></ol>
+                <ol><li>7. Az első autórádiót a Motorola alapítóinak köszönhetjük, akik még lemezjátszót is beépítettek egy járműbe (bár minden különösebb siker nélkül). Az első autórádió 1930-ban született meg és nyilvánvalóan extra tartozéknak számított: 130 dollárba került.</li></ol>
+                <ol><li>8. 1894-ben rendezték a világ első autóversenyét. A győztes 19 km/h-s átlagsebességgel száguldva, 6 óra 48 perc alatt tette meg a Párizs és Rouen közötti 126 km-es távot.</li></ol>
+                <ol><li>9. 1894-ben rendezték a világ első autóversenyét. A győztes 19 km/h-s átlagsebességgel száguldva, 6 óra 48 perc alatt tette meg a Párizs és Rouen közötti 126 km-es távot.
+                        Magyarországon Hacsek Béla optikus volt az első autótulajdonos, 1895-ben vásárolt egy Benz Velo gépkocsit, mely 1,5 lóerős volt és 20 km/óra volt a végsebessége. Sajnos e csodás jármű szervizelése korántsem volt egyszerű, hiszen hazánkban nyilvánvaló módon akkor még nem léteztek autószerelők. Így hát, ha Hacsek úr autója meghibásodott, akkor lovat fogtak elé és elvontatták a kovácshoz, lévén ő számított akkoriban gépész szakembernek. Ha ő nem járt sikerrel, akkor a gyárból érkezett segítség.
+                        A Volkswagen Bogár világcsúcstartó: a legnagyobb számban előállított gépkocsi, amelyen ráadásul az évtizedek során a relatív kevés fejlesztést hajtottak végre. 1938 és 2003 között 21,5 millió modell készült az ikonikus Bogárból.</li></ol>   
             </article>
-            <aside class="col-md-4"></aside>
+            <aside class="col-md-4">
+                      <img src="https://megaport.hu/media/king-include/uploads/2020/01/1936-auburn-slowburn-2427736380.jpg
+                       " class="img-thumbnail" alt="fekete">
+                      <img src="https://megaport.hu/media/king-include/uploads/2020/01/1953-buick-skylark-skyscraper-8564903811.jpg
+                       " class="img-thumbnail" alt="lila">
+                       <img src="https://megaport.hu/media/king-include/uploads/2020/01/1948-jaguar-black-pearl-4605095127.jpg
+                       " class="img-thumbnail" alt="fekete2">
+                       <img src="https://megaport.hu/media/king-include/uploads/2020/01/1937-lincoln-zephyr-voodoo-priest-6043163337.jpg
+                       " class="img-thumbnail" alt="piros">
+            </aside>
             <footer class="col-md-12"></footer>
         </main>        
     </div>        
