--- a/evautoi.html
+++ b/evautoi.html
@@ -6,14 +6,15 @@
     <meta name="description" content="régi autók">
     <meta name="keywords" content="híre régi autók">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <title>Lavner Szabolcs</title>
 </head>
 <body>
     <div class="contanier">
         <main class="row">
-            <header class="col-md-12">
-                <h1>Régi autók</h1>
+            <header class="col-md-12 text-success">
+                <h1 class="">Régi autók</h1>
             </header>
             <nav class="navbar navbar-expand-sm bg-success navbar-light">
                 <div class="container-fluid">
@@ -45,12 +46,15 @@
                         </table>  
                         <p>forras: <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Carl-Benz_coloriert.jpg/500px-Carl-Benz_coloriert.jpg">https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Carl-Benz_coloriert.jpg/500px-Carl-Benz_coloriert.jpg</a></p>   
               </article>
-                <aside class="col-md-4">
-                    <img src="https://megaport.hu/medking-include/uploads/         2020/1936-auburn-slowburn-2427736380.jpg"       class="img-thumbnail" alt="fekete">
-                    <img src="https://megaport.hu/medking-include/uploads/         2020/1953-buick-skylark-skyscraper-85649038jpg"         class="img-thumbnail" alt="lila">
-                    <img src="https://megaport.hu/medking-include/uploads/         2020/1948-jaguar-black-pearl-4605095127.jpg"      class="img-thumbnail" alt="fekete2">
-                    <img src="https://megaport.hu/medking-include/uploads/         2020/1937-lincoln-zephyr-voodoo-priest-60431633jpg"         class="img-thumbnail" alt="piros">
-
+              <aside class="col-md-4">
+                      <img src="https://megaport.hu/media/king-include/uploads/2020/01/1936-auburn-slowburn-2427736380.jpg
+                       " class="img-thumbnail" alt="fekete">
+                      <img src="https://megaport.hu/media/king-include/uploads/2020/01/1953-buick-skylark-skyscraper-8564903811.jpg
+                       " class="img-thumbnail" alt="lila">
+                       <img src="https://megaport.hu/media/king-include/uploads/2020/01/1948-jaguar-black-pearl-4605095127.jpg
+                       " class="img-thumbnail" alt="fekete2">
+                       <img src="https://megaport.hu/media/king-include/uploads/2020/01/1937-lincoln-zephyr-voodoo-priest-6043163337.jpg
+                       " class="img-thumbnail" alt="piros">
             </aside>
             <footer class="col-md-12 text-center">
               <h2>Lavner Szabolcs</h2>
