--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="description" content="régi autók">
     <meta name="keywords" content="híre régi autók">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Lavner Szabolcs</title>
 </head>
 <body>
     <div class="container">
         <main class="row">
-            <header class="col-md-12">
+            <header class="col-md-12 text-success">
                 <h1>Régi autók</h1>
             </header>
-            <nav class="navbar navbar-expand-sm bg-light navbar-light">
+            <nav class="navbar navbar-expand-sm bg-success navbar-light">
                 <div class="container-fluid">
                     <ul class="navbar-nav">
                      <li class="nav-item">
